# LosPinginos

./: .gitignore  README.md  app.yml  db.yml  docker-compose.yml  git.yml  main  py.yml  pyproject.toml
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  constants.ts  index.css
frontend/src/Components/: Buttons.tsx  EffectSection.tsx  Modal.tsx
frontend/src/Components/Menu/: Form.tsx  Header.tsx  Logo.tsx  Menu.tsx  Sidebar.tsx  windet.tsx
frontend/src/Components/Menu/Course Panel/: CorseTabMenu.tsx  CoursePanel.tsx  TableCourses.tsx
frontend/src/Components/api/: api.ts
frontend/src/Components/auth/: Login.tsx  Register.tsx
frontend/src/Components/dto/: interfaces.ts
gitea/git/repositories/admin2/test_repos.git/info/: refs
gitea/git/repositories/admin2/test_repos.git/logs/: HEAD
gitea/git/repositories/admin2/test_repos.git/logs/refs/heads/: master
gitea/git/repositories/admin2/test_repos.git/refs/heads/: master
gitea/gitea/conf/: app.ini
gitea/gitea/indexers/issues.bleve/store/: root.bolt
gitea/gitea/jwt/: private.pem
gitea/gitea/queues/common/: LOG
gitea/gitea/sessions/3/7/: 378c6dd509666261
gitea/gitea/sessions/7/1/: 71db76ea4d2192c5
python/: Dockerfile  pyproject.toml
python/src/: app.py  check_connection.py  connection_config.py  const.py  flask1.py  not2day  tryrequest.py
